xmlui/src/components-core/optimization/specs/tests.txt
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (-=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (**=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (*=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (/=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (%=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (<<=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (>>=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (>>>=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (&=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (^=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (|=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (&&=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (||=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (??=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

 ✓ tests/components-core/scripts-runner/process-statement-a
sgn.test.ts (32 tests) 16ms
 ✓ tests/components-core/scripts-runner/eval-tree-func-decl
-async.test.ts (12 tests) 11ms
 ✓ tests/parsers/xmlui/transform.errors.test.ts (22 tests)
10ms
 ✓ tests/parsers/scripting/import-parse-basic.test.ts (13 t
ests) 9ms
 ✓ tests/parsers/scripting/function-proxy.test.ts (7 tests)
 10ms
 ✓ tests/parsers/scripting/module-with-imports.test.ts (18
tests) 12ms
 ✓ tests/parsers/xmlui/transform.regression.test.ts (9 test
s) 10ms
 ✓ tests/parsers/scripting/parser-new-operator.test.ts (33
tests) 9ms
 ✓ tests/components-core/theming/responsive-layout.test.ts
(91 tests) 9ms
 ✓ tests/components-core/reactive-graph/collectComponentDef
Graph.test.ts (10 tests) 9ms
stderr | tests/components-core/scripts-runner/bannedMembers
.test.ts > Eval-tree integration — warn mode > allows acces
s to a banned global identifier (warn mode)
[XMLUI sandbox] DOM API access to 'window.__xmlui_sandbox_t
est__' is not allowed in XMLUI expressions. Use the managed
 alternative.

stderr | tests/components-core/scripts-runner/bannedMembers
.test.ts > Default behaviour (strictDomSandbox not set) > a
llows access to a banned entry when strictDomSandbox is not
 set (default warn)
[XMLUI sandbox] DOM API access to 'window.__xmlui_sandbox_t
est__' is not allowed in XMLUI expressions.

 ✓ tests/components-core/scripts-runner/bannedMembers.test.
ts (38 tests) 9ms
 ✓ tests/parsers/scripting/parser-unary.test.ts (54 tests)
8ms
stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Async function
 declaration errors > should throw error for async function
 declaration
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Async function
 declaration errors > should throw error for async function
 with parameters
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Async function
 declaration errors > should throw error for nested async f
unction
Error while executing code: Error: XMLUI does not support a
sync function declarations.
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Await expressi
on errors > should throw error for await in return statemen
t
Error while executing code: Error: XMLUI does not support t
he await operator.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Await expressi
on errors > should throw error for await in variable declar
ation
Error while executing code: Error: XMLUI does not support t
he await operator.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async function with
await in body
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async arrow function
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async function expre
ssion
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async IIFE
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async IIFE with body
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

 ✓ tests/components-core/scripts-runner/async-await-errors.
test.ts (19 tests) 14ms
 ✓ tests/components-core/scripts-runner/phase3-globals.test
.ts (28 tests) 10ms
 ✓ tests/components-core/scripts-runner/eval-tree-func-decl
.test.ts (12 tests) 12ms
 ✓ tests/parsers/xmlui/transform.global.test.ts (26 tests)
10ms
 ✓ tests/components-core/RestApiProxy.uploadProgress.test.t
s (5 tests) 9ms

 ❯ tests/components-core/action/callApi-mockExecute.test.ts
 [queued]
 ❯ tests/components-core/optimization/computedUses.test.ts
 ✓ tests/keybinding-parser.test.ts (56 tests) 6ms
 ✓ tests/parsers/scripting/import-parse-alias.test.ts (15 t
ests) 7ms
 ✓ tests/components-core/scripts-runner/eval-tree-arrow.tes
t.ts (11 tests) 8ms

 ❯ tests/components-core/action/callApi-mockExecute.test.ts
 ✓ tests/language-server/services/completion.test.ts (22 te
sts | 1 todo) 10ms
 ✓ tests/components-core/action/callApi-mockExecute.test.ts
 (7 tests) 10ms

 ❯ tests/components-core/action/callApi-mockExecute.test.ts
stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '++dummy' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '--dummy' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy++' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy--' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '++dummy' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '--dummy' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy++' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy--' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.


 ❯ tests/components-core/action/callApi-mockExecute.test.ts
 ✓ tests/components-core/scripts-runner/eval-tree-pre-post.
test.ts (25 tests) 10ms
 ✓ tests/components-core/scripts-runner/process-function.te
st.ts (4 tests) 7ms

 ❯ tests/components-core/action/callApi-mockExecute.test.ts
 ✓ tests/components-core/RestApiProxy.transactionId.test.ts
 (7 tests) 5ms
 ✓ tests/parsers/xmlui/lint.test.ts (15 tests) 10ms

 ❯ tests/components-core/action/callApi-mockExecute.test.ts
 7/7

 ❯ tests/components-core/action/callApi-mockExecute.test.ts
 7/7
 ❯ tests/components-core/optimization/computedUses.test.ts
 ✓ tests/parsers/scripting/parser-expressions.test.ts (43 t
ests) 9ms

 ❯ tests/components-core/optimization/computedUses.test.ts
[queued]
 ✓ tests/parsers/scripting/import-position.test.ts (19 test
s) 12ms

 ✓ tests/components-core/scripts-runner/eval-tree-arrow-asy
nc.test.ts (11 tests) 10ms
 ✓ tests/parsers/scripting/parser-async-await.test.ts (28 t
ests) 8ms
 ✓ tests/components-core/theming/border-segments.test.ts (6
8 tests) 10ms
 ✓ tests/parsers/scripting/parser-function.test.ts (14 test
s) 7ms
 ✓ tests/components-core/scripts-runner/function-proxy.test
.ts (7 tests) 8ms
 ✓ tests/components-core/inspectorUtils.test.ts (43 tests)
7ms
 ✓ tests/parsers/scripting/parser-binary.test.ts (45 tests)
 9ms
 ✓ tests/parsers/xmlui/transform.escape.test.ts (17 tests)
8ms
stderr | tests/components-core/wrapComponent.test.tsx > wra
pComponent — renderers (render-prop) > creates a render-pro
p callback with positional context vars
[XMLUI Lexical Scoping] Component Test injected variables (
$item, $selectedValue, $inTrigger) into its template, but t
hey are NOT declared in its childInjectedVars metadata. Thi
s will cause the variables to be stripped during AST optimi
zation. Please add them to the component's metadata.

stderr | tests/components-core/wrapComponent.test.tsx > wra
pComponent — renderers (render-prop) > uses function form f
or computed context vars
[XMLUI Lexical Scoping] Component Test injected variables (
$item, $itemIndex, $isFirst, $isLast, $isSelected) into its
 template, but they are NOT declared in its childInjectedVa
rs metadata. This will cause the variables to be stripped d
uring AST optimization. Please add them to the component's
metadata.

stderr | tests/components-core/wrapComponent.test.tsx > wra
pComponent — renderers (render-prop) > null in positional c
ontextVars skips that argument
[XMLUI Lexical Scoping] Component Test injected variables (
$item, $index) into its template, but they are NOT declared
 in its childInjectedVars metadata. This will cause the var
iables to be stripped during AST optimization. Please add t
hem to the component's metadata.

 ✓ tests/components-core/wrapComponent.test.tsx (14 tests)
8ms
 ✓ tests/parsers/scripting/parser-destructuring.test.ts (23
 tests) 10ms
 ✓ tests/components-core/scripts-runner/eval-tree-new-opera
tor.test.ts (16 tests) 8ms
 ✓ tests/parsers/scripting/eval-tree-arrow.test.ts (9 tests
) 8ms
stdout | tests/components-core/scripts-runner/process-event
.test.ts > Process statements (exp) > Event issue
0

stdout | tests/components-core/scripts-runner/process-event
.test.ts > Process statements (exp) > Event issue
1

stdout | tests/components-core/scripts-runner/process-event
.test.ts > Process statements (exp) > Event issue
2

 ✓ tests/components-core/scripts-runner/process-event.test.
ts (2 tests) 7ms
 ✓ tests/parsers/scripting/lexer-import.test.ts (22 tests)
6ms
stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > createLifecycleDispatcher > async unmount handler report
s a violation but resolves
Lifecycle violation on 'uid-a': async 'unmount' handler is
not awaited (React commits unmount synchronously). Use 'onB
eforeDispose' for async flush. undefined

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > createLifecycleDispatcher > throwing handler reports a v
iolation and continues
Lifecycle violation on 'uid-a': 'mount' handler threw. Erro
r: nope
    at /Users/yurii/projects/nsoftware/xmlui-monorepo/xmlui
/tests/components-core/lifecycle/dispatcher.test.ts:93:13
    at Object.fire (/Users/yurii/projects/nsoftware/xmlui-m
onorepo/xmlui/src/components-core/lifecycle/dispatcher.ts:7
2:26)
    at /Users/yurii/projects/nsoftware/xmlui-monorepo/xmlui
/tests/components-core/lifecycle/dispatcher.test.ts:98:13
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:1903:2
6
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2326:2
0
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects/nsoftwar
e/xmlui-monorepo/node_modules/@vitest/runner/dist/chunk-art
ifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2305:2
0
    at new Promise (<anonymous>)

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > trace helpers > reportLifecycleViolation defaults to war
n severity
Lifecycle violation on 'x': 'mount' handler threw. Error: b
oom
    at /Users/yurii/projects/nsoftware/xmlui-monorepo/xmlui
/tests/components-core/lifecycle/dispatcher.test.ts:132:14
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:1903:2
6
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2326:2
0
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects/nsoftwar
e/xmlui-monorepo/node_modules/@vitest/runner/dist/chunk-art
ifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2305:2
0
    at new Promise (<anonymous>)
    at runWithTimeout (file:///Users/yurii/projects/nsoftwa
re/xmlui-monorepo/node_modules/@vitest/runner/dist/chunk-ar
tifact.js:2272:10)
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2955:6
4

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > trace helpers > reportLifecycleViolation strict mode emi
ts error severity
Lifecycle violation on 'x': async 'unmount' handler is not
awaited (React commits unmount synchronously). Use 'onBefor
eDispose' for async flush. undefined

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > trace helpers > returned violation is an instance of Lif
ecycleViolationError
Lifecycle violation on 'x': 'mount' handler threw. undefine
d

 ✓ tests/components-core/lifecycle/dispatcher.test.ts (14 t
ests) 7ms
 ✓ tests/parsers/xmlui/transform.attr.test.ts (14 tests) 7m
s
 ✓ tests/components-core/scripts-runner/phase2-globals.test
.ts (40 tests) 8ms
 ✓ tests/parsers/scripting/eval-tree-pre-post.test.ts (17 t
ests) 7ms
 ✓ tests/components-core/theming/component-layout.resolver.
test.ts (70 tests) 7ms
stdout | tests/parsers/scripting/process-event.test.ts > Pr
ocess statements > Event issue
0

stdout | tests/parsers/scripting/process-event.test.ts > Pr
ocess statements > Event issue
1

stdout | tests/parsers/scripting/process-event.test.ts > Pr
ocess statements > Event issue
2

 ✓ tests/parsers/scripting/process-event.test.ts (2 tests)
8ms
 ✓ tests/parsers/scripting/import-parse-multiple.test.ts (1
4 tests) 8ms
 ✓ tests/components-core/local-storage-functions.test.ts (2
2 tests) 7ms
 ✓ tests/components-core/type-contracts/verifier.test.ts (2
9 tests) 6ms
 ✓ tests/parsers/scripting/parser-errors.test.ts (38 tests)
 8ms
 ✓ tests/components-core/theming/layout-property-parser.tes
t.ts (75 tests) 6ms
 ✓ tests/language-server/services/hover.test.ts (5 tests) 5
ms
 ✓ tests/components/CodeBlock/hightlight-code.test.ts (56 t
ests) 6ms
 ✓ tests/parsers/xmlui/transform.warnings.test.ts (8 tests)
 6ms
 ✓ tests/components-core/pubsub/PubSubService.test.ts (12 t
ests) 5ms
 ✓ tests/components-core/optimization/computedUses.test.ts
(94 tests) 22ms
 ✓ tests/components-core/audit/correlation.test.ts (14 test
s) 4ms
 ✓ tests/parsers/xmlui/transform.circular.test.ts (1 test)
5ms
 ✓ tests/components-core/type-contracts/rules/rules.test.ts
 (74 tests) 5ms
 ✓ tests/components-core/scripts-runner/appStateSchema.test
.ts (12 tests) 6ms
 ✓ tests/parsers/style-parser/parser.test.ts (50 tests) 9ms
 ✓ tests/components-core/scripts-runner/AttributeValueParse
r.test.ts (12 tests) 6ms
 ✓ tests/components/Table/Table-keyboard-actions.test.ts (1
9 tests) 5ms
 ✓ tests/components-core/utils/resolveResponsiveWhen.test.t
s (29 tests) 6ms
 ✓ tests/components-core/accessibility/linter.test.ts (22 t
ests) 5ms
 ✓ tests/parsers/paremeter-parser.test.ts (9 tests) 5ms
 ✓ tests/parsers/scripting/process-implicit-context.test.ts
 (2 tests) 5ms
 ✓ tests/components-core/standalone-import.test.ts (33 test
s) 6ms
 ✓ tests/components-core/interception/ReadOnlyCollection.te
st.ts (36 tests) 5ms
 ✓ tests/parsers/scripting/parser-primary.test.ts (15 tests
) 5ms
 ✓ tests/components-core/analyzer/rules/_utils.test.ts (21
tests) 4ms
 ✓ tests/parsers/scripting/circular-import.test.ts (18 test
s) 5ms
 ✓ tests/components-core/scripts-runner/process-implicit-co
ntext.test.ts (2 tests) 5ms
 ✓ tests/parsers/scripting/ast-import.test.ts (9 tests) 5ms
 ✓ tests/bin/vite-plugin-import.test.ts (27 tests) 5ms
 ✓ tests/components-core/analyzer/walker.test.ts (11 tests)
 5ms
 ✓ tests/parsers/scripting/module-resolver.test.ts (38 test
s) 5ms
 ✓ tests/components-core/theming/layout-resolver2.test.ts (
23 tests) 5ms
 ✓ tests/components-core/analyzer/rules/expr-rules.test.ts
(13 tests) 4ms
 ✓ tests/components-core/theming/padding-segments.test.ts (
42 tests) 5ms
 ✓ tests/components-core/rendering/buildProxy.test.ts (16 t
ests) 4ms
 ✓ tests/abstractions/layout-context-utils.test.ts (28 test
s) 6ms
 ✓ tests/components-core/scripts-runner/eval-tree-regressio
n.test.ts (4 tests) 5ms
 ✓ tests/components-core/rendering/stateComposition.test.ts
 (15 tests) 4ms
 ✓ tests/components-core/concurrency/token.test.ts (14 test
s) 5ms
 ✓ tests/components-core/behaviors/behaviorConditionEvaluat
or.test.ts (57 tests) 5ms
 ✓ tests/components-core/rendering/ContainerUtils.test.ts (
28 tests) 5ms
 ✓ tests/parsers/parameter-parser.test.ts (9 tests) 5ms
 ✓ tests/components-core/analyzer/rules/id-unknown-prop-eve
nt.test.ts (14 tests) 5ms
 ✓ tests/components/TileGrid/TileGrid-keyboard-navigation.t
est.ts (23 tests) 4ms
 ✓ tests/parsers/scripting/module-parse.test.ts (3 tests) 4
ms
 ✓ tests/components-core/errors/app-error.test.ts (23 tests
) 4ms
 ✓ tests/language-server/project.test.ts (4 tests) 4ms
 ✓ tests/parsers/markdown/parse-binding-expression.test.ts
(19 tests) 4ms
 ✓ tests/components-core/RestApiProxy.resolveUrl.test.ts (1
2 tests) 4ms
 ✓ tests/components-core/rendering/collectFnVarDeps.test.ts
 (11 tests) 4ms
 ✓ tests/components-core/interception/orderBy.test.ts (12 t
ests) 3ms
 ✓ tests/components-core/type-contracts/rules/coerce.test.t
s (9 tests) 4ms
 ✓ tests/components-core/interception/request-param-convert
er.test.ts (16 tests) 4ms
 ✓ tests/components-core/analyzer/rules/id-unknown-componen
t.test.ts (9 tests) 4ms
 ✓ tests/components-core/reactive-graph/findCycles.test.ts
(8 tests) 4ms
 ✓ tests/components-core/optimization/validateInjectedVars.
test.ts (28 tests) 5ms
 ✓ tests/components-core/scripts-runner/navigateBlank.test.
ts (9 tests) 4ms
 ✓ tests/components-core/scripts-runner/parser-regression.t
est.ts (1 test) 3ms
 ✓ tests/components-core/reactive-graph/diagnostics.test.ts
 (8 tests) 5ms
 ✓ tests/parsers/style-parser/parseHVar.test.ts (7 tests) 3
ms
 ✓ tests/components-core/behaviors/PubSubBehavior.test.ts (
10 tests) 3ms
 ✓ tests/components-core/inspector-logging.test.ts (5 tests
) 3ms
 ✓ tests/components-core/audit/metadata-rules.test.ts (16 t
ests) 5ms
 ✓ tests/components-core/type-contracts/suggestions.test.ts
 (12 tests) 4ms
 ✓ tests/parsers/xmlui/transform.test.ts (2 tests) 5ms
 ✓ tests/components-core/xmluiMarkupToComponent.test.ts (1
test) 4ms
 ✓ tests/parsers/common/input-stream.test.ts (9 tests) 3ms
 ✓ tests/parsers/scripting/parser-assignments.test.ts (1 te
st) 3ms
 ✓ tests/components/Tree/Tree-states.test.ts (6 tests) 3ms
 ✓ tests/components-core/audit/policy.test.ts (6 tests) 4ms
 ✓ tests/components-core/reactive-graph/graph.test.ts (7 te
sts) 3ms
 ✓ tests/components-core/container/buildProxy.test.ts (4 te
sts) 3ms
 ✓ tests/components-core/global-variables-runtime.test.ts (
5 tests) 2ms
 ✓ tests/parsers/style-parser/generateHvarChain.test.ts (2
tests) 2ms
 ✓ tests/components-core/abstractions/treeAbstractions.test
.ts (3 tests) 2ms
 ✓ tests/components-core/utils/LruCache.test.ts (4 tests |
2 skipped) 2ms

 Test Files  177 passed (177)
      Tests  9653 passed | 2 skipped | 1 todo (9656)
   Start at  17:31:28
   Duration  26.83s (transform 14.83s, setup 33.53s, import
 71.41s, tests 5.09s, environment 156.51s)
└─ xmlui#test:unit ──
┌─ //#_e2e > cache miss, executing e5b0b06983632576
cache miss, executing e5b0b06983632576


> xmlui-root@1.0.0 _e2e
> cross-env PLAYWRIGHT_USE_DEV_SERVER=false playwright test
[WebServer] (node:12533) [DEP0040] DeprecationWarning: The
`punycode` module is deprecated. Please use a userland alte
rnative instead.
[WebServer] (Use `node --trace-deprecation ...` to show whe
re the warning was created)


Running 6922 tests using 9 workers
  1) [xmlui-nonsmoke] › xmlui/src/components/AutoComplete/A
utoComplete.spec.ts:1235:3 › Validation Feedback › shows va
lid icon in concise mode when valid

    Error: expect(locator).toBeVisible() failed

    Locator: locator('[data-part-id=\'conciseValidationFeed
back\']').locator('[data-icon-name=\'checkmark\']')
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for locator('[data-part-id=\'conciseValidat
ionFeedback\']').locator('[data-icon-name=\'checkmark\']')


      1257 |     const conciseFeedback = page.locator("[dat
a-part-id='conciseValidationFeedback']");
      1258 |     await expect(conciseFeedback).toBeVisible(
);
    > 1259 |     await expect(conciseFeedback.locator("[dat
a-icon-name='checkmark']")).toBeVisible();
           |
                            ^
      1260 |   });
      1261 |
      1262 |   test("concise mode tooltip shows error messa
ge on hover", async ({ initTestBed, page }) => {
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/AutoComplete/AutoComplete.spec.ts:1259:
75

    Error Context: test-results/src-components-AutoComplet-
5a4ed--in-concise-mode-when-valid-xmlui-nonsmoke/error-cont
ext.md

  2) [xmlui-nonsmoke] › xmlui/src/components/Checkbox/Check
box.spec.ts:885:3 › Custom inputTemplate › $checked has no
meaning outside component

    Error: expect(locator).toContainText(expected) failed

    Locator: getByTestId('inner')
    Expected substring: "true"
    Received string:    "false"
    Timeout: 10000ms

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for getByTestId('inner')
        14 × locator resolved to <button type="button" data
-testid="inner" data-component-type="Button" class="_button
_15rdj_14 _buttonHorizontal_15rdj_39 _sm_15rdj_49 _solidPri
mary_15rdj_104 css-o7p4hm css-1rbf16h css-o7p4hm css-1rbf16
h">false</button>
           - unexpected value "false"


      894 |       </Fragment>
      895 |     `);
    > 896 |     await expect(page.getByTestId("inner")).toC
ontainText("true");
          |                                             ^
      897 |     await expect(page.getByTestId("outer")).toC
ontainText("");
      898 |   });
      899 |
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/Checkbox/Checkbox.spec.ts:896:45

    Error Context: test-results/src-components-Checkbox-Ch-
aaabc-o-meaning-outside-component-xmlui-nonsmoke/error-cont
ext.md

    Retry #1 ──────────────────────────────────────────────

    Error: expect(locator).toContainText(expected) failed

    Locator: getByTestId('inner')
    Expected substring: "true"
    Received string:    "false"
    Timeout: 10000ms

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for getByTestId('inner')
        14 × locator resolved to <button type="button" data
-testid="inner" data-component-type="Button" class="_button
_15rdj_14 _buttonHorizontal_15rdj_39 _sm_15rdj_49 _solidPri
mary_15rdj_104 css-o7p4hm css-1rbf16h css-o7p4hm css-1rbf16
h">false</button>
           - unexpected value "false"


      894 |       </Fragment>
      895 |     `);
    > 896 |     await expect(page.getByTestId("inner")).toC
ontainText("true");
          |                                             ^
      897 |     await expect(page.getByTestId("outer")).toC
ontainText("");
      898 |   });
      899 |
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/Checkbox/Checkbox.spec.ts:896:45

    Error Context: test-results/src-components-Checkbox-Ch-
aaabc-o-meaning-outside-component-xmlui-nonsmoke-retry1/err
or-context.md

    attachment #2: trace (application/zip) ────────────────
    test-results/src-components-Checkbox-Ch-aaabc-o-meaning
-outside-component-xmlui-nonsmoke-retry1/trace.zip
    Usage:

        npx playwright show-trace test-results/src-componen
ts-Checkbox-Ch-aaabc-o-meaning-outside-component-xmlui-nons
moke-retry1/trace.zip

    ───────────────────────────────────────────────────────

  3) [xmlui-nonsmoke] › xmlui/src/components/Checkbox/Check
box.spec.ts:900:3 › Custom inputTemplate › $setChecked has
no meaning outside component

    Error: expect(locator).toContainText(expected) failed

    Locator: getByTestId('inner')
    Expected substring: "true"
    Received string:    "false"
    Timeout: 10000ms

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for getByTestId('inner')
        14 × locator resolved to <button type="button" data
-testid="inner" data-component-type="Button" class="_button
_15rdj_14 _buttonHorizontal_15rdj_39 _sm_15rdj_49 _solidPri
mary_15rdj_104 css-o7p4hm css-1rbf16h css-o7p4hm css-1rbf16
h">false</button>
           - unexpected value "false"


      909 |       </Fragment>
      910 |     `);
    > 911 |     await expect(page.getByTestId("inner")).toC
ontainText("true");
          |                                             ^
      912 |     await expect(page.getByTestId("outer")).toC
ontainText("");
      913 |     await page.getByTestId("outer").click();
      914 |     await expect(page.getByTestId("inner")).toC
ontainText("true");
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/Checkbox/Checkbox.spec.ts:911:45

    Error Context: test-results/src-components-Checkbox-Ch-
8a82e-o-meaning-outside-component-xmlui-nonsmoke/error-cont
ext.md

    Retry #1 ──────────────────────────────────────────────

    Error: expect(locator).toContainText(expected) failed

    Locator: getByTestId('inner')
    Expected substring: "true"
    Received string:    "false"
    Timeout: 10000ms

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for getByTestId('inner')
        14 × locator resolved to <button type="button" data
-testid="inner" data-component-type="Button" class="_button
_15rdj_14 _buttonHorizontal_15rdj_39 _sm_15rdj_49 _solidPri
mary_15rdj_104 css-o7p4hm css-1rbf16h css-o7p4hm css-1rbf16
h">false</button>
           - unexpected value "false"


      909 |       </Fragment>
      910 |     `);
    > 911 |     await expect(page.getByTestId("inner")).toC
ontainText("true");
          |                                             ^
      912 |     await expect(page.getByTestId("outer")).toC
ontainText("");
      913 |     await page.getByTestId("outer").click();
      914 |     await expect(page.getByTestId("inner")).toC
ontainText("true");
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/Checkbox/Checkbox.spec.ts:911:45

    Error Context: test-results/src-components-Checkbox-Ch-
8a82e-o-meaning-outside-component-xmlui-nonsmoke-retry1/err
or-context.md

    attachment #2: trace (application/zip) ────────────────
    test-results/src-components-Checkbox-Ch-8a82e-o-meaning
-outside-component-xmlui-nonsmoke-retry1/trace.zip
    Usage:

        npx playwright show-trace test-results/src-componen
ts-Checkbox-Ch-8a82e-o-meaning-outside-component-xmlui-nons
moke-retry1/trace.zip

    ───────────────────────────────────────────────────────

  4) [xmlui-nonsmoke] › xmlui/src/components/IncludeMarkup/
IncludeMarkup.spec.ts:12:3 › Basic Functionality › renders
a Fragment fetched from a URL

    Error: expect(locator).toBeVisible() failed

    Locator: getByTestId('included-text')
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for getByTestId('included-text')


      20 |     await initTestBed(`<IncludeMarkup url="${MOC
K_URL}"/>`);
      21 |
    > 22 |     await expect(page.getByTestId("included-text
")).toBeVisible();
         |
    ^
      23 |     await expect(page.getByTestId("included-text
")).toHaveText("Hello from include");
      24 |   });
      25 |
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/IncludeMarkup/IncludeMarkup.spec.ts:22:
53

    Error Context: test-results/src-components-IncludeMark-
08167-Fragment-fetched-from-a-URL-xmlui-nonsmoke/error-cont
ext.md

  5) [xmlui-nonsmoke] › xmlui/src/components/Table/Table.sp
ec.ts:4181:3 › Column width theme variables › column width
is consistent whether specified as px or equivalent em them
e var

    Error: expect(received).toBeGreaterThanOrEqual(expected
)

    Expected: >= 40
    Received:    39

    Call Log:
    - Timeout 10000ms exceeded while waiting on the predica
te

      4222 |       .toBeLessThanOrEqual(52);
      4223 |
    > 4224 |     await expect
           |     ^
      4225 |       .poll(
      4226 |         async () => (await themeHeader.boundin
gBox())?.width,
      4227 |         { timeout: 10000 },
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/Table/Table.spec.ts:4224:5

    Error Context: test-results/src-components-Table-Table-
a802e--or-equivalent-em-theme-var-xmlui-nonsmoke/error-cont
ext.md

…warning › warning message contains the duplicated id value
[xmlui] Warnings in markup:
  Duplicate component id "my-unique-id" detected at line 6,
 column 19. Component ids must be unique within the same ma
rkup.
…ts a warning group when two sibling components share an id
[xmlui] Warnings in markup:
  Duplicate component id "dup" detected at line 6, column 1
7. Component ids must be unique within the same markup.
…emits a warning for each extra occurrence beyond the first
[xmlui] Warnings in markup:
  Duplicate component id "triple" detected at line 6, colum
n 17. Component ids must be unique within the same markup.
  Duplicate component id "triple" detected at line 7, colum
n 17. Component ids must be unique within the same markup.
… warning when a nested component duplicates an ancestor id
[xmlui] Warnings in markup:
  Duplicate component id "container" detected at line 5, co
lumn 17. Component ids must be unique within the same marku
p.
  6) [xmlui-nonsmoke] › xmlui/src/components-core/behaviors
/FormBindingBehavior.spec.ts:828:3 › Validation › 'required
' validation shows error when isDirty and losing focus

    Error: expect(locator).toBeVisible() failed

    Locator: getByText('This field is required')
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for getByText('This field is required')


      857 |
      858 |     // Wait for validation error message to app
ear
    > 859 |     await expect(page.getByText("This field is
required")).toBeVisible();
          |
            ^
      860 |   });
      861 |
      862 |   test("'required' validation shows error on fo
rm submit (like FormItem)", async ({
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components-core/behaviors/FormBindingBehavior.spec
.ts:859:60

    Error Context: test-results/src-components-core-behavi-
a1ed6-en-isDirty-and-losing-focus-xmlui-nonsmoke/error-cont
ext.md

  7) [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/pol
l-an-api-at-regular-intervals.spec.ts:38:3 › Live server me
trics dashboard › displays metric values and timestamp @web
site

    Error: expect(locator).toBeVisible() failed

    Locator: getByText(/\d+%/)
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for getByText(/\d+%/)



        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/tests-e2e/how-to-examples/poll-an-api-at-regular-inter
vals.spec.ts:47:42

    Error Context: test-results/tests-e2e-how-to-examples--
b415f-metric-values-and-timestamp-xmlui-nonsmoke/error-cont
ext.md

  2 failed
    [xmlui-nonsmoke] › xmlui/src/components/Checkbox/Checkb
ox.spec.ts:885:3 › Custom inputTemplate › $checked has no m
eaning outside component
    [xmlui-nonsmoke] › xmlui/src/components/Checkbox/Checkb
ox.spec.ts:900:3 › Custom inputTemplate › $setChecked has n
o meaning outside component
  5 flaky
    [xmlui-nonsmoke] › xmlui/src/components/AutoComplete/Au
toComplete.spec.ts:1235:3 › Validation Feedback › shows val
id icon in concise mode when valid
    [xmlui-nonsmoke] › xmlui/src/components/IncludeMarkup/I
ncludeMarkup.spec.ts:12:3 › Basic Functionality › renders a
 Fragment fetched from a URL
    [xmlui-nonsmoke] › xmlui/src/components/Table/Table.spe
c.ts:4181:3 › Column width theme variables › column width i
s consistent whether specified as px or equivalent em theme
 var
    [xmlui-nonsmoke] › xmlui/src/components-core/behaviors/
FormBindingBehavior.spec.ts:828:3 › Validation › 'required'
 validation shows error when isDirty and losing focus
    [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/poll
-an-api-at-regular-intervals.spec.ts:38:3 › Live server met
rics dashboard › displays metric values and timestamp @webs
ite
  66 skipped
  6849 passed (3.8m)

To open last HTML report run:

  npx playwright show-report
└─ //#_e2e ──

 Tasks:    13 successful, 14 total
Cached:    0 cached, 14 total
  Time:    4m22.779s
Failed:    //#_e2e


~/projects/nsoftware/xmlui-monorepo yurii/computedUses* ⇡ 4m 23s
❯
